; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_parse.c_foldarith.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_parse.c_foldarith.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }

@OPR_ADD = common dso_local global i64 0, align 8
@LJ_DUALNUM = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.TYPE_8__*, %struct.TYPE_8__*)* @foldarith to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @foldarith(i64 %0, %struct.TYPE_8__* %1, %struct.TYPE_8__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca %struct.TYPE_8__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %6, align 8
  store %struct.TYPE_8__* %2, %struct.TYPE_8__** %7, align 8
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %12 = call i32 @expr_isnumk_nojump(%struct.TYPE_8__* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %3
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %16 = call i32 @expr_isnumk_nojump(%struct.TYPE_8__* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %14, %3
  store i32 0, i32* %4, align 4
  br label %60

19:                                               ; preds = %14
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %21 = call i32 @expr_numberV(%struct.TYPE_8__* %20)
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %23 = call i32 @expr_numberV(%struct.TYPE_8__* %22)
  %24 = load i64, i64* %5, align 8
  %25 = trunc i64 %24 to i32
  %26 = sext i32 %25 to i64
  %27 = load i64, i64* @OPR_ADD, align 8
  %28 = sub nsw i64 %26, %27
  %29 = call i64 @lj_vm_foldarith(i32 %21, i32 %23, i64 %28)
  store i64 %29, i64* %9, align 8
  %30 = load i64, i64* %9, align 8
  %31 = call i32 @setnumV(i32* %8, i64 %30)
  %32 = call i64 @tvisnan(i32* %8)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %37, label %34

34:                                               ; preds = %19
  %35 = call i64 @tvismzero(i32* %8)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %34, %19
  store i32 0, i32* %4, align 4
  br label %60

38:                                               ; preds = %34
  %39 = load i64, i64* @LJ_DUALNUM, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %54

41:                                               ; preds = %38
  %42 = load i64, i64* %9, align 8
  %43 = call i64 @lj_num2int(i64 %42)
  store i64 %43, i64* %10, align 8
  %44 = load i64, i64* %10, align 8
  %45 = load i64, i64* %9, align 8
  %46 = icmp eq i64 %44, %45
  br i1 %46, label %47, label %53

47:                                               ; preds = %41
  %48 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %49 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %49, i32 0, i32 0
  %51 = load i64, i64* %10, align 8
  %52 = call i32 @setintV(i32* %50, i64 %51)
  store i32 1, i32* %4, align 4
  br label %60

53:                                               ; preds = %41
  br label %54

54:                                               ; preds = %53, %38
  %55 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %56 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %55, i32 0, i32 0
  %57 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %56, i32 0, i32 0
  %58 = load i64, i64* %9, align 8
  %59 = call i32 @setnumV(i32* %57, i64 %58)
  store i32 1, i32* %4, align 4
  br label %60

60:                                               ; preds = %54, %47, %37, %18
  %61 = load i32, i32* %4, align 4
  ret i32 %61
}

declare dso_local i32 @expr_isnumk_nojump(%struct.TYPE_8__*) #1

declare dso_local i64 @lj_vm_foldarith(i32, i32, i64) #1

declare dso_local i32 @expr_numberV(%struct.TYPE_8__*) #1

declare dso_local i32 @setnumV(i32*, i64) #1

declare dso_local i64 @tvisnan(i32*) #1

declare dso_local i64 @tvismzero(i32*) #1

declare dso_local i64 @lj_num2int(i64) #1

declare dso_local i32 @setintV(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
